--- a/merge-sync/merge-sync.org
+++ b/merge-sync/merge-sync.org
@@ -107,10 +107,10 @@ client.
 
 The above description of sync focuses on a single sync cycle. In order to be robust
 against failures, and to handle client restarts, clients must be able to perform multiple
-sync cycles with an initialized database. The interface between eth2 and eth1 is designed
-to make this possible because it is uni-directional: When eth2 restarts, it can simply
-perform the usual request sequence and expect that the eth1 client will reset itself to
-the correct state.
+sync cycles with an initialized database. The interface between eth2 and eth1 makes this
+easy for eth2 because it is uni-directional: When eth2 restarts, it can simply perform the
+usual request sequence and expect that the eth1 client will reset itself to the correct
+state.
 
 When eth1 receives note of a finalized block B_F, there are two possibilities: if the
 block already exists in the local chain, and its application state is also available, sync
