merge-sync: clarify final() should be called for all blocks

--- a/merge-sync/merge-sync.org
+++ b/merge-sync/merge-sync.org
@@ -29,7 +29,8 @@ that eth2 can invoke the following operations in the eth1 client:
 - checkpoint(H) :: notifies the eth1 client about a checkpoint header. This has no useful
   response.
 - final(B) :: marks block B_x finalized. The eth1 client can answer 'ok', 'syncing' or
-  synced(B).
+  synced(B). Note that we assume this will be called for all finalized blocks, even though
+  eth2 only finalizes on certain 'epoch boundary' blocks.
 - proc(B) :: submits a non-finalized block for processing. The eth1 client can respond
   with 'valid' or 'invalid'.
 
