merge-sync: update message handling again

--- a/merge-sync/merge-sync.org
+++ b/merge-sync/merge-sync.org
@@ -28,13 +28,13 @@ that eth2 can invoke the following operations in the eth1 client:
 
 - checkpoint(H) :: notifies the eth1 client about a checkpoint header. This has no useful
   response.
-- final(B) :: marks block B_x finalized. The eth1 client can answer 'ok', 'syncing', or
-  synced(B). Note that we assume this will be called for all finalized blocks, even though
-  eth2 only finalizes on certain 'epoch boundary' blocks.
+- final(B) :: marks block B_x finalized. The eth1 client can answer 'old', 'syncing',
+  invalid(B) or synced(B). Note that we assume this will be called for all finalized
+  blocks, even though eth2 only finalizes on certain 'epoch boundary' blocks.
 - proc(B) :: submits a non-finalized block for processing. The eth1 client can respond
-  with 'valid' or 'invalid'.
+  with 'valid', 'invalid' or 'syncing'.
 
-In diagrams, responses to eth2 requests are not shown unless they meaningfully impact sync.
+In diagrams, not all responses to eth2 requests are shown.
 
 * Sync
 
@@ -84,10 +84,17 @@ valid. Furthermore, it is assumed that B_F is a descendant of B_W.
 
 While the chain is downloading/processing, the eth1 client receives further notifications
 about newly-finalized blocks in range B_{F+1}...B_{F+t}. During sync, at latest finalized
-block B_f, clients must handle final(B_x) as follows: marking a marking a previously seen
-block final (x <= f) yields the 'ok' response. Attempting to mark an unknown future block
-final (x > f+1) restarts sync on B_x. For x == f+1, the block is simply appended to the
-database and f = f+1.
+block B_f, clients must handle final(B_x) as follows:
+
+  - for x <= f, the response is 'old' if the block is known, or invalid(B_x) if the block
+    is unknown.
+  - for x > f+1, attempting to finalize an unknown future block, sync is restarted on B_x
+    and the response is 'syncing'.
+  - for x == f+1, the block is simply appended to the database. If the client is still
+    busy syncing to B_f, the response is 'syncing'. If the client is done syncing to block
+    B_f, it processes block B_x and outputs synced(B_x) or invalid(B_x).
+
+When proc() is received during sync, the response is 'syncing'.
 
 After starting sync on B_F, the eth1 client first downloads the chain of block headers
 down from H_F, following parent hashes (2). Headers are written to the database. The
