--- a/merge-sync/merge-sync.org
+++ b/merge-sync/merge-sync.org
@@ -2,13 +2,16 @@
 
 * Sync & The Merge
 
-In this document, we present our ideas for implementing chain synchronization on the
-merged eth1 + eth2 chain.
+**Warning!** This is a work in progress. After initial review, it seems that the sync
+scheme presented here will not work without modifications. See end of document for known
+issues and potential solutions. For now, you should read this as a description of the
+ideal sync algorithm, keeping in mind that it will become more complicated later.
 
-After the merge event, eth1 and eth2 clients run in tandem. The eth2 client maintains the
-connection to the beacon chain and performs fork choice. The eth1 client, a.k.a. the
-'execution layer', receives block data from the eth2 client, executes/verifies it and
-maintains the application state.
+In this document, we (the geth team) present our ideas for implementing chain
+synchronization on the merged eth1 + eth2 chain. After the merge event, eth1 and eth2
+clients run in tandem. The eth2 client maintains the connection to the beacon chain and
+performs fork choice. The eth1 client, a.k.a. the 'execution layer', receives block data
+from the eth2 client, executes/verifies it and maintains the application state.
 
 The interface that eth2 and eth1 use to communicate is uni-directional: all cross-client
 communication is initiated by eth2, and happens in the form of requests. Eth1 simply
@@ -197,3 +200,36 @@ recommend that eth1 clients to maintain a way to manually reorg up to 90,000 blo
 To make this 'manual intervention reorg' work, eth1 client can maintain backward diffs in
 a persistent store. If an intervention is requested, these diffs can be incrementally
 applied to the state of B_F, resetting the client to an earlier state.
+
+** Issues
+
+In early review of this scheme, two issues were discovered. Both stem from our
+misunderstanding of eth2 finalization semantics.
+
+(1) Since eth2 finalizes blocks only on epoch boundaries, it will probably only call
+final(B) for epoch blocks. This could be handled a bit better by using proc(B) during
+sync.
+
+(2) While finalization will work within ~64 blocks in the happy case, it can take up to 2
+weeks to finalize in the event of a network partition. Since the maximum number of
+non-finalized blocks is so much larger than we initially anticipated, it will not be
+possible to use B_F as the persistent state block.
+
+We have decided to tackle this issue in the following way:
+
+- At head block H, define the 'calcified' block B_C with C = min(H-512, F). This puts an
+  upper bound of 512 blocks on the number of states kept in memory.
+- Define that clients should keep the state of B_C in persistent storage.
+- Use B_C as the initial sync target. This has implications on the sync trigger because
+  the eth1 client can no longer simply rely on final(B) to start sync (B_C may be
+  non-final).
+- Add a new call **reset(B)** to reset the eth1 client to a historical block. Require that
+  clients must be able to satisfy any reset in range B_{F}...B_{H}. They will probably have to
+  implement something like the persistent reverse diffs recommended in the reorg section.
+
+Adding the calcified block also adds some tricky new corner cases and failure modes. In
+particular, if the eth1 client just performed snap sync, it will not be able to reorg
+below B_C, because reverse diffs down to B_F will not be available. We may solve this by
+recommending that nodes should attempt snap sync if reset(B) cannot be satisfied. For
+sure, some nodes will be synced enough to serve this state to others. In the absolute
+worst case, we need to make reverse diffs available for download in snap sync.
