--- a/merge-sync/merge-sync.org
+++ b/merge-sync/merge-sync.org
@@ -83,8 +83,8 @@ current head block b_H is reached.
 Upon startup, the eth1 client first waits for a checkpoint header H_W from the eth2
 client. H_W must be a descendant of the genesis block B_G.
 
-Sync begins when the finalized block B_F is received (1). This block is assumed to be
-valid. Furthermore, it is assumed that B_F is a descendant of B_W.
+Sync begins when the finalized block B_F is received. This block is assumed to be valid.
+Furthermore, it is assumed that B_F is a descendant of B_W.
 
 While the chain is downloading/processing, the eth1 client receives further notifications
 about newly-finalized blocks in range B_{F+1}...B_{F+t}. During sync, at latest finalized
@@ -100,15 +100,15 @@ block B_f, clients must handle final(B_x) as follows:
 
 When proc() is received during sync, the response is 'syncing'.
 
-After starting sync on B_F, the eth1 client first downloads the chain of block headers
+#+CAPTION: Downloading the finalized eth1 chain
+#+ATTR_HTML: :width 730 :height 173
+[[./img/eth1-1.svg]]
+
+After starting sync on B_F (1), the eth1 client first downloads the chain of block headers
 down from H_F, following parent hashes (2). Headers are written to the database. The
 header chain must contain the checkpoint header H_W, and sync aborts if a different header
 is encountered at the same block number. This sanity check exists to ensure that the chain
 is valid without having to sync all the way back to the genesis block.
-
-#+CAPTION: Downloading the finalized eth1 chain
-#+ATTR_HTML: :width 730 :height 173
-[[./img/eth1-1.svg]]
 
 When the genesis header H_G is reached, block body data can be downloaded (3). There are
 two ways to do this:
