--- a/merge-sync/merge-sync.org
+++ b/merge-sync/merge-sync.org
@@ -32,7 +32,7 @@ that eth2 can invoke the following operations in the eth1 client:
 
 - checkpoint(H) :: notifies the eth1 client about a checkpoint header. This has no useful
   response.
-- final(B) :: marks block B_x finalized. The eth1 client can answer 'old', 'syncing',
+- final(B) :: submits a finalized block B_x. The eth1 client can answer 'old', 'syncing',
   invalid(B) or synced(B). Note that we assume this will be called for all finalized
   blocks, not just on epoch boundaries.
 - proc(B) :: submits a non-finalized block for processing. The eth1 client can respond
