merge-sync: clarify response at end of sync

--- a/merge-sync/merge-sync.org
+++ b/merge-sync/merge-sync.org
@@ -64,11 +64,12 @@ The eth2 client keeps following the beacon chain until the eth1 sync completes, 
 submitting finalized blocks to the eth1 client. This means it should repeat step (3) for
 every new finalized block.
 
-The eth1 client sync will usually take quite a bit of time to complete. When the eth1
-client signals that it is done (4), the beacon chain will have advanced by t blocks to the
-latest finalized block b_{F+t}. The application state of B_{F+t} is now available and the
-eth2 client can perform additional cross-validation against this state. For example, it
-could read the deposit contract here.
+The eth1 sync will usually take quite a bit of time to complete. While it is syncing, the
+the beacon chain advances by t blocks to the latest finalized block b_{F+t}.
+
+The eth1 client signals that it is done by responding with synced(B_{F+t}), The
+application state of B_{F+t} is now available and the eth2 client can perform additional
+cross-validation against this state. For example, it could read the deposit contract here.
 
 The eth2 client should now submit the execution-layer block data of all non-finalized
 beacon blocks to the eth1 client for processing (5). The sync procedure completes when the
