merge-sync: update

--- a/merge-sync/merge-sync.org
+++ b/merge-sync/merge-sync.org
@@ -60,14 +60,14 @@ the eth1 client (3).
 #+ATTR_HTML: :width 730 :height 173
 [[./img/beacon-1.svg]]
 
-The eth2 client keeps following the beacon chain until the eth1 sync completes, and keeps
+The eth2 client keeps following the beacon chain until eth1 sync completes, and keeps
 submitting finalized blocks to the eth1 client. This means it should repeat step (3) for
 every new finalized block.
 
-The eth1 sync will usually take quite a bit of time to complete. While it is syncing, the
-the beacon chain advances by t blocks to the latest finalized block b_{F+t}.
+Eth1 sync will usually take quite a bit of time to complete. While it is syncing, the
+beacon chain advances by t blocks to the latest finalized block b_{F+t}.
 
-The eth1 client signals that it is done by responding with synced(B_{F+t}), The
+The eth1 client signals that it is done by responding with synced(B_{F+t}) (4). The
 application state of B_{F+t} is now available and the eth2 client can perform additional
 cross-validation against this state. For example, it could read the deposit contract here.
 
